<resources>
    <string name="app_name">Test</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="age">Age</string>
    <string name="no_result">No Item Found!</string>
    <string name="error_no_internet">No Internet Connection!</string>
    <string name="error_socket_timeout">Timeout Error</string>
    <string name="error_ssl_handshake">SSL Problem</string>
    <string name="error_json_parsing">Json Parsing Error</string>
    <string name="search">Search</string>
    <string name="retry">Retry</string>
    <string name="error_email">Invalid email</string>
    <string name="error_password">Password must be between 6 and 12 characters</string>
    <string name="error_age">Age must be between 18 and 99!</string>
</resources>